--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "w6",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://teemo0909.github.io/_multipages",
+  "homepage": "https://tanatron.github.io/_multipages",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
@@ -30,6 +30,7 @@
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
+    "gh-pages": "^6.2.0",
     "globals": "^15.9.0",
     "vite": "^5.4.8"
   }
